--- a/activity.html
+++ b/activity.html
@@ -24,17 +24,63 @@
                     <a href="index.html"><img src="images/library-logo.png" alt="公共圖書館"></a>
                 </div>
                 <div class="nav-btn">
-                    <ul>
-                        <li><a href="index.html">首頁</a></li>
-                        <li><a href="about.html">關於圖書館</a></li>
-                        <li><a href="#" class="active">活動總覽</a></li>
-                        <li><a href="search.html">館藏查詢</a></li>
-                        <li><a href="newbooks.html">最新書籍</a></li>
-                        <li><a href="contact.html">聯絡我們</a></li>
-                    </ul>
-                    <div class="btn-group">
-                        <a href="#" class="little-btn yellow tour-guide-btn">導覽服務</a>
-                        <a href="#"class="little-btn green" id="account-btn"><span class="material-symbols-outlined">login</span>我的帳戶</a>
+                    <div class="mobile-menu-overlay"></div>
+                    <div class="mobile-menu-content">
+                        <img src="./images/library-logo-white.png" alt="公共圖書館">
+                        <ul>
+                            <li><a href="index.html" class="p2">首頁</a></li>
+                            <li><a href="about.html" class="p2">關於圖書館</a></li>
+                            <li><a href="#" class=" active p2">活動總覽</a></li>
+                            <li><a href="search.html" class="p2">館藏查詢</a></li>
+                            <li><a href="newbooks.html" class="p2">最新書籍</a></li>
+                            <li><a href="contact.html" class="p2">聯絡我們</a></li>
+                            <li>
+                                <a href="" class="tour-guide-btn p2">導覽服務</a>
+                                <a href="student.html" class="h5-ch">
+                                    <div class="text">
+                                        <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
+                                    </div>
+                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                </a>
+                                <a href="advanced-course.html" class="h5-ch">
+                                    <div class="text">
+                                        <span class="material-symbols-outlined">flag</span>研究與進修專區
+                                    </div>
+                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                </a>
+                                <a href="senior.html" class="h5-ch">
+                                    <div class="text">
+                                        <span class="material-symbols-outlined">person_play</span>樂齡學習專區
+                                    </div>
+                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="btn-group">
+                            <a href="#" class="little-btn yellow tour-guide-btn p2">導覽服務</a>
+                            <a href="#" class="little-btn green account-btn">
+                                <span class="material-symbols-outlined">login</span>
+                                <span class="p2">我的帳戶</span>
+                            </a>
+                        </div>
+                        <div class="tool">
+                            <!-- nav字體縮放按鈕 -->
+                            <div class="font-scale">
+                                <div>
+                                    <span class="material-symbols-outlined">text_fields</span>
+                                    <p class="p2">字體</p>
+                                </div>
+                                <div class="font-scale-buttons">
+                                    <button class="p1" data-size="small">小</button>
+                                    <button class="p1 active" data-size="medium">中</button>
+                                    <button class="p1" data-size="large">大</button>
+                                </div>
+                            </div>
+                            <a href="#" class="little-btn green-line account-btn">
+                                <span class="material-symbols-outlined">login</span>
+                                <p class="p2">我的帳戶</p>
+                            </a>
+                        </div>
                     </div>
                     <div class="hb">
                         <span></span>
@@ -44,13 +90,6 @@
                 </div>
             </div>
         </nav>
-        <!-- 字體縮放按鈕 -->
-        <div class="font-scale">
-            <div><span class="material-symbols-outlined">text_fields</span><p class="p2">字體</p></div>
-            <button class="p1" data-size="small">小</button>
-            <button class="p1 active" data-size="medium">中</button>
-            <button class="p1" data-size="large">大</button>
-        </div>
         <!-- 會員註冊登入視窗 -->
         <section id="account" class="account modal-overlay modalHidden">
             <div class="container">
@@ -188,11 +227,12 @@
                     </div>
                 </div>
             </div>
-            <img src="images/bg/activity-bg1.png" alt="activity-bg1">
+            <img src="images/bg/activity-bg1-1.png" alt="activity-bg" class="activity-bg">
         </section>
     </header>
     <main>
         <section class="activity activity-page">
+            <img src="./images/bg/activity-bg1-2.png" alt="activity-bg" class="activity-bg">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -212,8 +252,8 @@
                             <div class="card-mask">
                                 <div class="detail">
                                     <i class="fa-solid fa-heart"></i>
-                                    <p class="h5-ch-medium">常設展</p>
-                                    <p class="p1">無需報名<br>每日14:00–16:00歡迎參觀</p>
+                                    <p class="p1">常設展</p>
+                                    <p class="p2">無需報名<br>每日14:00–16:00歡迎參觀</p>
                                 </div>
                                 <img src="images/senior/senior-activity01.png" alt="樂齡活動01">
                                 <div class="tag btn-sm">常設展</div>
@@ -239,9 +279,9 @@
                             <div class="card-mask">
                                 <div class="detail">
                                     <i class="fa-solid fa-heart"></i>
-                                    <p class="h5-ch-medium">報名時間</p>
-                                    <p class="p1">2025.11.05 09:00<br>至<br>2025.11.17 23:59</p>
-                                    <p class="p1">截止</p>
+                                    <p class="p1">報名時間</p>
+                                    <p class="p2">2025.11.05 09:00<br>至<br>2025.11.17 23:59</p>
+                                    <p class="p2">截止</p>
                                 </div>
                                 <img src="images/senior/senior-activity02.png" alt="樂齡活動02">
                                 <div class="tag btn-sm">當日活動</div>
@@ -266,9 +306,9 @@
                             <div class="card-mask">
                                 <div class="detail">
                                     <i class="fa-solid fa-heart"></i>
-                                    <p class="h5-ch-medium">報名時間</p>
-                                    <p class="p1">2025.12.10 09:00<br>至<br>2025.12.18 23:59</p>
-                                    <p class="p1">截止</p>
+                                    <p class="p1">報名時間</p>
+                                    <p class="p2">2025.12.10 09:00<br>至<br>2025.12.18 23:59</p>
+                                    <p class="p2">截止</p>
                                 </div>
                                 <img src="images/senior/senior-activity05.png" alt="樂齡活動05">
                                 <div class="tag btn-sm">當日活動</div>
@@ -293,8 +333,8 @@
                             <div class="card-mask">
                                 <div class="detail">
                                     <i class="fa-solid fa-heart"></i>
-                                    <p class="h5-ch-medium">常設展</p>
-                                    <p class="p1">無需報名<br>每日10:00 - 17:00歡迎參觀</p>
+                                    <p class="p1">常設展</p>
+                                    <p class="p2">無需報名<br>每日10:00 - 17:00歡迎參觀</p>
                                 </div>
                                 <img src="images/senior/senior-activity06.png" alt="樂齡活動06">
                             <div class="tag btn-sm">常設展</div>
@@ -319,9 +359,9 @@
                             <div class="card-mask">
                                 <div class="detail">
                                     <i class="fa-solid fa-heart"></i>
-                                    <p class="h5-ch-medium">報名時間</p>
-                                    <p class="p1">2025.11.26 09:00<br>至<br>2025.12.20 23:59</p>
-                                    <p class="p1">截止</p>
+                                    <p class="p1">報名時間</p>
+                                    <p class="p2">2025.11.26 09:00<br>至<br>2025.12.20 23:59</p>
+                                    <p class="p2">截止</p>
                                 </div>
                                 <img src="images/student/student-activity06.png" alt="student-activity06">
                             <div class="tag btn-sm">青少年科技</div>
@@ -346,9 +386,9 @@
                             <div class="card-mask">
                                 <div class="detail">
                                     <i class="fa-solid fa-heart"></i>
-                                    <p class="h5-ch-medium">報名時間</p>
-                                    <p class="p1">2025.12.03 09:00<br>至<br>2025.01.10 23:59</p>
-                                    <p class="p1">截止</p>
+                                    <p class="p1">報名時間</p>
+                                    <p class="p2">2025.12.03 09:00<br>至<br>2025.01.10 23:59</p>
+                                    <p class="p2">截止</p>
                                 </div>
                                 <img src="images/student/student-activity05.png" alt="newbooks01">
                                 <div class="tag btn-sm">兒童推廣</div>
