--- a/index.html
+++ b/index.html
@@ -31,18 +31,64 @@
                     <a href="index.html"><img src="images/library-logo.png" alt="公共圖書館"></a>
                 </div>
                 <div class="nav-btn">
-                    <ul>
-                        <li><a href="#" class="active">首頁</a></li>
-                        <li><a href="about.html">關於圖書館</a></li>
-                        <li><a href="activity.html">活動總覽</a></li>
-                        <li><a href="search.html">館藏查詢</a></li>
-                        <li><a href="newbooks.html">最新書籍</a></li>
-                        <li><a href="contact.html">聯絡我們</a></li>
-                    </ul>
-                    <div class="btn-group">
-                        <a href="#" class="little-btn yellow tour-guide-btn">導覽服務</a>
-                        <a href="#" class="little-btn green" id="account-btn"><span
-                                class="material-symbols-outlined">login</span><span>我的帳戶</span></a>
+                    <div class="mobile-menu-overlay"></div>
+                    <div class="mobile-menu-content">
+                        <img src="./images/library-logo-white.png" alt="公共圖書館">
+                        <ul>
+                            <li><a href="#" class="active p2">首頁</a></li>
+                            <li><a href="about.html" class="p2">關於圖書館</a></li>
+                            <li><a href="activity.html" class="p2">活動總覽</a></li>
+                            <li><a href="search.html" class="p2">館藏查詢</a></li>
+                            <li><a href="newbooks.html" class="p2">最新書籍</a></li>
+                            <li><a href="contact.html" class="p2">聯絡我們</a></li>
+                            <li>
+                                <p class="p2">導覽服務</p>
+                                <a href="student.html" class="h5-ch">
+                                    <div class="text">
+                                        <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
+                                    </div>
+                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
+                                </a>
+                                <a href="advanced-course.html" class="h5-ch">
+                                    <div class="text">
+                                        <span class="material-symbols-outlined">flag</span>研究與進修專區
+                                    </div>
+                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
+                                </a>
+                                <a href="senior.html" class="h5-ch">
+                                    <div class="text">
+                                        <span class="material-symbols-outlined">person_play</span>樂齡學習專區
+                                    </div>
+                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="btn-group">
+                            <a href="#" class="little-btn yellow tour-guide-btn p2">導覽服務</a>
+                            <a href="#" class="little-btn green account-btn">
+                                <span class="material-symbols-outlined">login</span>
+                                <span class="p2">我的帳戶</span>
+                            </a>
+                        </div>
+                        
+                        <div class="tool">
+                            <!-- nav字體縮放按鈕 -->
+                            <div class="font-scale">
+                                <div>
+                                    <span class="material-symbols-outlined">text_fields</span>
+                                    <p class="p2">字體</p>
+                                </div>
+                                <div class="font-scale-buttons">
+                                    <button class="p1" data-size="small">小</button>
+                                    <button class="p1 active" data-size="medium">中</button>
+                                    <button class="p1" data-size="large">大</button>
+                                </div>
+                            </div>
+                            <a href="#" class="little-btn green-line account-btn">
+                                <span class="material-symbols-outlined">login</span>
+                                <p class="p2">我的帳戶</p>
+                            </a>
+                        </div>
                     </div>
                     <div class="hb">
                         <span></span>
@@ -88,15 +134,6 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
-        <!-- 字體縮放按鈕 -->
-        <div class="font-scale">
-            <div><span class="material-symbols-outlined">text_fields</span>
-                <p class="p2">字體</p>
-            </div>
-            <button class="p1" data-size="small">小</button>
-            <button class="p1 active" data-size="medium">中</button>
-            <button class="p1" data-size="large">大</button>
-        </div>
         <!-- 會員註冊登入視窗 -->
         <section id="account" class="account modal-overlay modalHidden">
             <div class="container">
@@ -612,14 +649,30 @@
             </div>
             <div class="swiper best-moments-swiper">
                 <div class="swiper-wrapper">
-                    <img src="images/best-moments/best-moments-s-01.png" alt="best-moments-01">
-                    <img src="images/best-moments/best-moments-s-02.png" alt="best-moments-02">
-                    <img src="images/best-moments/best-moments-s-03.png" alt="best-moments-03">
-                    <img src="images/best-moments/best-moments-s-04.png" alt="best-moments-04">
-                    <img src="images/best-moments/best-moments-s-05.png" alt="best-moments-05">
-                    <img src="images/best-moments/best-moments-s-06.png" alt="best-moments-06">
-                    <img src="images/best-moments/best-moments-s-07.png" alt="best-moments-07">
-                    <img src="images/best-moments/best-moments-s-08.png" alt="best-moments-08">
+                    <div class="swiper-slide">
+                        <img src="images/best-moments/best-moments-s-01.png" alt="best-moments-01">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="images/best-moments/best-moments-s-02.png" alt="best-moments-02">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="images/best-moments/best-moments-s-03.png" alt="best-moments-03">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="images/best-moments/best-moments-s-04.png" alt="best-moments-04">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="images/best-moments/best-moments-s-05.png" alt="best-moments-05">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="images/best-moments/best-moments-s-06.png" alt="best-moments-06">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="images/best-moments/best-moments-s-07.png" alt="best-moments-07">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="images/best-moments/best-moments-s-08.png" alt="best-moments-08">
+                    </div>
                 </div>
             </div>
             <img src="images/bg/index-bg6.png" alt="index-bg6" class="bg">
