--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                                 <span class="p2">我的帳戶</span>
                             </a>
                         </div>
-                        
                         <div class="tool">
                             <!-- nav字體縮放按鈕 -->
                             <div class="font-scale">
@@ -98,7 +97,6 @@
                 </div>
             </div>
         </nav>
-
         <section class="hero">
             <div class="search-bar reveal-item">
                 <div class="tab-btns">
@@ -134,128 +132,9 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
-        <!-- 會員註冊登入視窗 -->
-        <section id="account" class="account modal-overlay modalHidden">
-            <div class="container">
-                <div class="modal-content row">
-                    <div class="close-btn">
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <div class="col-6">
-                        <div class="form-panel" id="signup-panel">
-                            <span class="h2-eg-medium">Sing up</span>
-                            <h2 class="h5-ch">註冊帳號</h2>
-                            <form action="">
-                                <label for="" class="p2">帳號
-                                    <input type="text" placeholder="請輸入身分證字號或信箱"></label>
-                                <label for="" class="p2">密碼
-                                    <input type="password" placeholder="請輸入密碼"></label>
-                                <label for="" class="p2">確認密碼
-                                    <input type="password" placeholder="請再次輸入密碼"></label>
-                                <button type="submit" class="little-btn green-line btn-sm">註冊帳號</button>
-                                <div id="switch-login">
-                                    <p class="p2">已經有帳號了嗎?</p>
-                                    <a href="#" class="p2">我要登入<span
-                                            class="material-symbols-outlined">arrow_right_alt</span></a>
-
-                                </div>
-                            </form>
-                            <img src="images/pop-up-window/signup.png" alt="signup image">
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="form-panel" id="login-panel">
-                            <span class="h2-eg-medium">Login</span>
-                            <h2 class="h5-ch">登入帳號</h2>
-                            <form action="">
-                                <label for="" class="p2">帳號
-                                    <input type="text" placeholder="請輸入身分證字號或信箱"></label>
-                                <label for="" class="p2">密碼
-                                    <input type="password" placeholder="請輸入密碼"></label>
-                                <a href="#" class="p2 forget">忘記密碼?</a>
-                                <button type="submit" class="little-btn green-line btn-sm">登入</button>
-                                <div id="switch-signup">
-                                    <a href="#" class="p2"><span
-                                            class="material-symbols-outlined">arrow_left_alt</span>註冊新帳號</a>
-                                    <p class="p2">您還沒有帳號嗎?</p>
-                                </div>
-                            </form>
-                            <img src="images/pop-up-window/login.png" alt="login image" class="imgHidden">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- 導覽服務 -->
-        <section id="tour-guide" class="modal-overlay tour-guide modalHidden">
-            <div class="container">
-                <div class="modal-content row">
-                    <div class="close-btn">
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <h2 class="h3-ch">導覽服務</h2>
-                    <p class="p2">幫助您快速尋找到您需要的服務內容</p>
-                    <div class="col-12 cards-group">
-                        <a href="student.html" class="reveal-item">
-                            <div class="card pink">
-                                <span class="material-symbols-outlined arrow">north_east</span>
-                                <div class="card-content">
-                                    <span class="material-symbols-outlined">menu_book</span>
-                                    <h4 class="h4-ch">兒童與青少年專區</h4>
-                                    <span class="h3-eg">Kid & Teenager</span>
-                                    <div class="btn-sm-group ">
-                                        <div class="btn-sm">好書推薦</div>
-                                        <div class="btn-sm">主題活動</div>
-                                        <div class="btn-sm">親子共讀</div>
-                                        <div class="btn-sm">學習資源</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="advanced-course.html" class="reveal-item">
-                            <div class="card orange">
-                                <span class="material-symbols-outlined arrow">north_east</span>
-                                <div class="card-content">
-                                    <span class="material-symbols-outlined">flag</span>
-                                    <h4 class="h4-ch">研究與進修專區</h4>
-                                    <span class="h3-eg">Advanced Course</span>
-                                    <div class="btn-sm-group ">
-                                        <div class="btn-sm">好書推薦</div>
-                                        <div class="btn-sm">期刊論文</div>
-                                        <div class="btn-sm">職場理財</div>
-                                        <div class="btn-sm">研習課程</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="senior.html" class="reveal-item">
-                            <div class="card purple">
-                                <span class="material-symbols-outlined arrow">north_east</span>
-                                <div class="card-content">
-                                    <span class="material-symbols-outlined">person_play</span>
-                                    <h4 class="h4-ch">樂齡學習專區</h4>
-                                    <span class="h3-eg">Senior Learning</span>
-                                    <div class="btn-sm-group ">
-                                        <div class="btn-sm">好書推薦</div>
-                                        <div class="btn-sm">主題活動</div>
-                                        <div class="btn-sm">親子共讀</div>
-                                        <div class="btn-sm">學習資源</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-
-                    </div>
-                    <img src="./images/library-logo.png" alt="公共圖書館">
-                    <img src="./images/pop-up-window/tour-guide.png" alt="tour-guide">
-                </div>
-            </div>
-        </section>
     </header>
-    <main>
 
+    <main>
         <section class="tour-guide">
             <div class="container">
                 <div class="row">
@@ -329,10 +208,6 @@
                                 </a>
                             </div>
                         </div>
-
-
-
-
                     </div>
                 </div>
             </div>
@@ -645,7 +520,6 @@
                     </div>
                     <div class="col-md-3 col-1"></div>
                 </div>
-
             </div>
             <div class="swiper best-moments-swiper">
                 <div class="swiper-wrapper">
@@ -727,7 +601,7 @@
                     </div>
                 </div>
                 <div class="col-12 source">
-                    <p class="p2">參考資料來源: 博客來:
+                    <p>參考資料來源: 博客來:
                         http://xn--books-9c3ht2uuqs.com.tw/?srsltid=AfmBOoq2Y_y7kdHy_gMNaupda3pu3Lo6NsjaiSWDwKtxbmgR8aTGuEtt
                         | Pinterest:https://www.pinterest.com/ | 新竹縣公共圖書館官網: https://hcplibrary.hchcc.gov.tw/wSite/mp?mp=1
                     </p>
@@ -736,6 +610,128 @@
             </div>
         </div>
     </footer>
+
+    <!-- 跳窗區塊開始 -->
+    <!-- 會員註冊登入視窗 -->
+    <section id="account" class="account modal-overlay modalHidden">
+        <div class="container">
+            <div class="modal-content row">
+                <div class="close-btn">
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="col-6">
+                    <div class="form-panel" id="signup-panel">
+                        <span class="h2-eg-medium">Sing up</span>
+                        <h2 class="h5-ch">註冊帳號</h2>
+                        <form action="">
+                            <label for="" class="p2">帳號
+                                <input type="text" placeholder="請輸入身分證字號或信箱"></label>
+                            <label for="" class="p2">密碼
+                                <input type="password" placeholder="請輸入密碼"></label>
+                            <label for="" class="p2">確認密碼
+                                <input type="password" placeholder="請再次輸入密碼"></label>
+                            <button type="submit" class="little-btn green-line btn-sm">註冊帳號</button>
+                            <div id="switch-login">
+                                <p class="p2">已經有帳號了嗎?</p>
+                                <a href="#" class="p2">我要登入<span
+                                        class="material-symbols-outlined">arrow_right_alt</span></a>
+
+                            </div>
+                        </form>
+                        <img src="images/pop-up-window/signup.png" alt="signup image">
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="form-panel" id="login-panel">
+                        <span class="h2-eg-medium">Login</span>
+                        <h2 class="h5-ch">登入帳號</h2>
+                        <form action="">
+                            <label for="" class="p2">帳號
+                                <input type="text" placeholder="請輸入身分證字號或信箱"></label>
+                            <label for="" class="p2">密碼
+                                <input type="password" placeholder="請輸入密碼"></label>
+                            <a href="#" class="p2 forget">忘記密碼?</a>
+                            <button type="submit" class="little-btn green-line btn-sm">登入</button>
+                            <div id="switch-signup">
+                                <a href="#" class="p2"><span
+                                        class="material-symbols-outlined">arrow_left_alt</span>註冊新帳號</a>
+                                <p class="p2">您還沒有帳號嗎?</p>
+                            </div>
+                        </form>
+                        <img src="images/pop-up-window/login.png" alt="login image" class="imgHidden">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- 導覽服務 -->
+    <section id="tour-guide" class="modal-overlay tour-guide modalHidden">
+        <div class="container">
+            <div class="modal-content row">
+                <div class="close-btn">
+                    <span></span>
+                    <span></span>
+                </div>
+                <h2 class="h3-ch">導覽服務</h2>
+                <p class="p2">幫助您快速尋找到您需要的服務內容</p>
+                <div class="col-12 cards-group">
+                    <a href="student.html" class="reveal-item">
+                        <div class="card pink">
+                            <span class="material-symbols-outlined arrow">north_east</span>
+                            <div class="card-content">
+                                <span class="material-symbols-outlined">menu_book</span>
+                                <h4 class="h4-ch">兒童與青少年專區</h4>
+                                <span class="h3-eg">Kid & Teenager</span>
+                                <div class="btn-sm-group ">
+                                    <div class="btn-sm">好書推薦</div>
+                                    <div class="btn-sm">主題活動</div>
+                                    <div class="btn-sm">親子共讀</div>
+                                    <div class="btn-sm">學習資源</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="advanced-course.html" class="reveal-item">
+                        <div class="card orange">
+                            <span class="material-symbols-outlined arrow">north_east</span>
+                            <div class="card-content">
+                                <span class="material-symbols-outlined">flag</span>
+                                <h4 class="h4-ch">研究與進修專區</h4>
+                                <span class="h3-eg">Advanced Course</span>
+                                <div class="btn-sm-group ">
+                                    <div class="btn-sm">好書推薦</div>
+                                    <div class="btn-sm">期刊論文</div>
+                                    <div class="btn-sm">職場理財</div>
+                                    <div class="btn-sm">研習課程</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="senior.html" class="reveal-item">
+                        <div class="card purple">
+                            <span class="material-symbols-outlined arrow">north_east</span>
+                            <div class="card-content">
+                                <span class="material-symbols-outlined">person_play</span>
+                                <h4 class="h4-ch">樂齡學習專區</h4>
+                                <span class="h3-eg">Senior Learning</span>
+                                <div class="btn-sm-group ">
+                                    <div class="btn-sm">好書推薦</div>
+                                    <div class="btn-sm">主題活動</div>
+                                    <div class="btn-sm">親子共讀</div>
+                                    <div class="btn-sm">學習資源</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+                <img src="./images/library-logo.png" alt="公共圖書館">
+                <img src="./images/pop-up-window/tour-guide.png" alt="tour-guide">
+            </div>
+        </div>
+    </section>
+
     <script src="javascript/font-size-switch.js"></script>
     <script src="javascript/script.js"></script>
     <!-- swiper -->
