將卡片元件獨立css，nav與漢堡統一架構rwd

--- a/activity.html
+++ b/activity.html
@@ -30,40 +30,38 @@
                         <ul>
                             <li><a href="index.html" class="p2">首頁</a></li>
                             <li><a href="about.html" class="p2">關於圖書館</a></li>
-                            <li><a href="#" class=" active p2">活動總覽</a></li>
+                            <li><a href="#" class="active p2">活動總覽</a></li>
                             <li><a href="search.html" class="p2">館藏查詢</a></li>
                             <li><a href="newbooks.html" class="p2">最新書籍</a></li>
                             <li><a href="contact.html" class="p2">聯絡我們</a></li>
                             <li>
-                                <a href="" class="tour-guide-btn p2">導覽服務</a>
+                                <p class="p2">導覽服務</p>
                                 <a href="student.html" class="h5-ch">
                                     <div class="text">
                                         <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
                                     </div>
-                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
                                 </a>
                                 <a href="advanced-course.html" class="h5-ch">
                                     <div class="text">
                                         <span class="material-symbols-outlined">flag</span>研究與進修專區
                                     </div>
-                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
                                 </a>
                                 <a href="senior.html" class="h5-ch">
                                     <div class="text">
                                         <span class="material-symbols-outlined">person_play</span>樂齡學習專區
                                     </div>
-                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
                                 </a>
                             </li>
                         </ul>
-                        <div class="btn-group">
+                        <div class="tool-btn">
                             <a href="#" class="little-btn yellow tour-guide-btn p2">導覽服務</a>
                             <a href="#" class="little-btn green account-btn">
                                 <span class="material-symbols-outlined">login</span>
                                 <span class="p2">我的帳戶</span>
                             </a>
-                        </div>
-                        <div class="tool">
                             <!-- nav字體縮放按鈕 -->
                             <div class="font-scale">
                                 <div>
@@ -76,10 +74,6 @@
                                     <button class="p1" data-size="large">大</button>
                                 </div>
                             </div>
-                            <a href="#" class="little-btn green-line account-btn">
-                                <span class="material-symbols-outlined">login</span>
-                                <p class="p2">我的帳戶</p>
-                            </a>
                         </div>
                     </div>
                     <div class="hb">
@@ -144,7 +138,7 @@
                                 <div class="tag btn-sm">常設展</div>
                             </div>
                             
-                            <div class="detail">
+                            <div class="text-area">
                                 <div class="day">
                                     <span class="date strong-number-lg-blod">11.15</span>
                                     <span class="week">六</span>
@@ -165,14 +159,13 @@
                                 <div class="detail">
                                     <i class="fa-solid fa-heart"></i>
                                     <p class="p1">報名時間</p>
-                                    <p class="p2">2025.11.05 09:00<br>至<br>2025.11.17 23:59</p>
-                                    <p class="p2">截止</p>
+                                    <p class="p2">2025.11.05 09:00 ~<br>2025.11.17 23:59 截止</p>
                                 </div>
                                 <img src="images/senior/senior-activity02.png" alt="樂齡活動02">
                                 <div class="tag btn-sm">當日活動</div>
                             </div>
                             
-                            <div class="detail">
+                            <div class="text-area">
                                 <div class="day">
                                     <span class="date strong-number-lg-blod">11.20</span>
                                     <span class="week">三</span>
@@ -192,8 +185,7 @@
                                 <div class="detail">
                                     <i class="fa-solid fa-heart"></i>
                                     <p class="p1">報名時間</p>
-                                    <p class="p2">2025.12.10 09:00<br>至<br>2025.12.18 23:59</p>
-                                    <p class="p2">截止</p>
+                                    <p class="p2">2025.12.10 09:00 ~<br>2025.12.18 23:59 截止</p>
                                 </div>
                                 <img src="images/senior/senior-activity05.png" alt="樂齡活動05">
                                 <div class="tag btn-sm">當日活動</div>
@@ -245,8 +237,7 @@
                                 <div class="detail">
                                     <i class="fa-solid fa-heart"></i>
                                     <p class="p1">報名時間</p>
-                                    <p class="p2">2025.11.26 09:00<br>至<br>2025.12.20 23:59</p>
-                                    <p class="p2">截止</p>
+                                    <p class="p2">2025.11.26 09:00 ~<br>2025.12.20 23:59 截止</p>
                                 </div>
                                 <img src="images/student/student-activity06.png" alt="student-activity06">
                             <div class="tag btn-sm">青少年科技</div>
@@ -272,8 +263,7 @@
                                 <div class="detail">
                                     <i class="fa-solid fa-heart"></i>
                                     <p class="p1">報名時間</p>
-                                    <p class="p2">2025.12.03 09:00<br>至<br>2025.01.10 23:59</p>
-                                    <p class="p2">截止</p>
+                                    <p class="p2">2025.12.03 09:00 ~<br>2026.01.10 23:59 截止</p>
                                 </div>
                                 <img src="images/student/student-activity05.png" alt="newbooks01">
                                 <div class="tag btn-sm">兒童推廣</div>
