--- a/about.html
+++ b/about.html
@@ -38,35 +38,33 @@
                             <li><a href="newbooks.html" class="p2">最新書籍</a></li>
                             <li><a href="contact.html" class="p2">聯絡我們</a></li>
                             <li>
-                                <a href="" class="tour-guide-btn p2">導覽服務</a>
+                                <p class="p2">導覽服務</p>
                                 <a href="student.html" class="h5-ch">
                                     <div class="text">
                                         <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
                                     </div>
-                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
                                 </a>
                                 <a href="advanced-course.html" class="h5-ch">
                                     <div class="text">
                                         <span class="material-symbols-outlined">flag</span>研究與進修專區
                                     </div>
-                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
                                 </a>
                                 <a href="senior.html" class="h5-ch">
                                     <div class="text">
                                         <span class="material-symbols-outlined">person_play</span>樂齡學習專區
                                     </div>
-                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
                                 </a>
                             </li>
                         </ul>
-                        <div class="btn-group">
+                        <div class="tool-btn">
                             <a href="#" class="little-btn yellow tour-guide-btn p2">導覽服務</a>
                             <a href="#" class="little-btn green account-btn">
                                 <span class="material-symbols-outlined">login</span>
                                 <span class="p2">我的帳戶</span>
                             </a>
-                        </div>
-                        <div class="tool">
                             <!-- nav字體縮放按鈕 -->
                             <div class="font-scale">
                                 <div>
@@ -79,10 +77,6 @@
                                     <button class="p1" data-size="large">大</button>
                                 </div>
                             </div>
-                            <a href="#" class="little-btn green-line account-btn">
-                                <span class="material-symbols-outlined">login</span>
-                                <p class="p2">我的帳戶</p>
-                            </a>
                         </div>
                     </div>
                     <div class="hb">
