--- a/index.html
+++ b/index.html
@@ -5,23 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>公共圖書館</title>
     <link rel="stylesheet" href="style/style.css">
+    <!-- swiper -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <!-- icon -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-    <!-- swiper -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
     <header>
@@ -42,25 +37,27 @@
                             <li><a href="newbooks.html" class="p2">最新書籍</a></li>
                             <li><a href="contact.html" class="p2">聯絡我們</a></li>
                             <li>
-                                <p class="p2">導覽服務</p>
-                                <a href="student.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
-                                <a href="advanced-course.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">flag</span>研究與進修專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
-                                <a href="senior.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">person_play</span>樂齡學習專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
+                                <p class="p2">導覽服務
+                                    <span class="material-symbols-outlined">keyboard_arrow_down</span>
+                                </p>
+                                <div class="tour-guide-sm">
+                                    <a href="student.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
+                                        </div>
+                                    </a>
+                                    <a href="advanced-course.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">flag</span>研究與進修專區
+                                        </div>
+                                    </a>
+                                    <a href="senior.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">person_play</span>樂齡學習專區
+                                        </div>
+                                    </a>
+                                </div>
+                                
                             </li>
                         </ul>
                         <div class="tool-btn">
